# samvidhan

./: .env.example  .gitignore  Dockerfile  FAILURES.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/sample/: constitution_sample.txt
eval/: questions.jsonl  run_eval.py
scripts/: download_constitution.sh
src/samvidhan/: __init__.py  chunking.py  config.py  generate.py  ingest.py  pipeline.py  retrieve.py
tests/: test_chunking.py  test_generate.py  test_pipeline.py
