[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samvidhan"
version = "1.0.0"
description = "Article-aware Retrieval-Augmented Q&A over the Constitution of India"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "huggingface-hub>=0.24.0",
    "pypdf>=4.2.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
